methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:14: error: ';' expected but 'else' found.
  else { left}
  ^